fully working integration

--- a/front-end/webapp/src/app/components/graphs/graphs.component.html
+++ b/front-end/webapp/src/app/components/graphs/graphs.component.html
@@ -1,6 +1,4 @@
-
-<div [hidden]="!showGraphs">
+<div>
     <div appAddGraph></div> 
     <div appArchiveGraph></div> 
 </div>
-<div *ngIf="!showGraphs" appArchiveTelemetry></div>
