--- a/front-end/webapp/src/app/components/telemetry/telemetry.component.html
+++ b/front-end/webapp/src/app/components/telemetry/telemetry.component.html
@@ -1,25 +1,28 @@
-<!-- <input (keyup)="applyFilter($event.target.value)" matInput placeholder="filter"> -->
-<table mat-table [dataSource]="parameterInfo">
+<mat-form-field>
+  <input
+    matInput
+    (keyup)="applyFilter($event)"
+    placeholder="Filter"
+  /><mat-icon matPrefix> search</mat-icon>
+</mat-form-field>
+<table mat-table [dataSource]="parameterInfoRealTime">
   <ng-container matColumnDef="telemetry">
     <mat-header-cell *matHeaderCellDef>Telemetry.</mat-header-cell>
-    <mat-cell *matCellDef="let parameter">{{ parameter.name }}</mat-cell>
+    <mat-cell class="name_column" *matCellDef="let parameter">{{ parameter.data[0].name }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="type">
     <mat-header-cell *matHeaderCellDef>Type.</mat-header-cell>
-    <mat-cell *matCellDef="let parameter">{{
-      parameter.type.engType
-    }}</mat-cell>
+    <mat-cell *matCellDef="let parameter">{{ parameter.data[0].type }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="value">
+    <mat-header-cell *matHeaderCellDef>Value.</mat-header-cell>
+    <mat-cell *matCellDef="let parameter">{{ parameter.data[0].series[0].value }}</mat-cell> 
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedCol"></mat-header-row>
   <mat-row
-    (click)="logRowData(myRowData)"
     *matRowDef="let myRowData; columns: displayedCol"
   ></mat-row>
 </table>
-<mat-paginator
-  [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons
-></mat-paginator>
-<!-- <p *ngFor="let parameter of parameterInfo"> {{ parameter.name }}</p> -->
