--- a/src/main/frontend/webapp/src/theme.scss
+++ b/src/main/frontend/webapp/src/theme.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @include mat-core();
 
 /* change the theme colors of angular-material 
